# demoqa_automation

./: .gitignore  .gitlab-ci.yml  Dockerfile  Jenkinsfile  README.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt
allure-results/: 00b6d9f6-3b25-4230-ad40-0f44be852a0c-container.json  00ba41ea-beb0-4b34-8beb-33518c0a66e2-container.json  01c137e3-31a7-47a3-94aa-4e37edbbb37c-result.json  02437625-9686-4f35-a91b-f0dbf38a04ab-container.json  02e6bd66-e80b-4670-9459-25fa0d7ae134-container.json  03812582-603b-4d3f-894e-fd3cd4cfc906-result.json  040a14a4-2c5c-4bf1-a241-fcac89bd4255-container.json  044f9019-871c-4bc5-9202-c9aeb4cf9f5d-container.json  0497ae6d-6991-424a-a525-20925e975fad-container.json  059c4319-1b94-4e49-813c-8ebf8119c18d-container.json  0622872b-7101-43ee-9e79-b7a06da18b56-result.json  078f2641-4112-4ba1-a0cd-7f318bc6782c-attachment.txt  07c5b9b8-99a7-4c9a-8e05-15daf6df5660-container.json  085f1944-fbcc-4771-bee4-8e093093167c-container.json  0ac582bd-28b7-47e9-86c0-13422ae82793-container.json  0acc12ad-357d-4a37-bb24-69661529d6e8-result.json  0b4bccc6-f0f6-475c-8e96-c2dab6645bff-result.json  0cf5e71d-88e8-4ca4-90d1-afd01ff141de-result.json  0d97aaf3-f7f3-4a95-ab06-a2e698d9e757-result.json  0da5f794-4b3b-4e4a-b146-349889960799-result.json  0e71a6aa-2498-4444-a117-1ec5f1f75c86-container.json  0fe5fc9b-8beb-4c2a-b711-31c72d56f7ae-container.json  11bb032b-4edd-4e9f-9103-c64a8c7661fd-container.json  1290eeaa-bae2-4693-b254-34a052fac154-result.json  1318b902-5395-4884-a5ed-264c51467488-container.json  1362a91b-69b1-4660-bc85-8cfa04bc5bb4-container.json  (+277 more)
(+211 files in other folders)
