[tool.poetry]
name = "devops-sandbox"
version = "0.1.0"
description = ""
authors = ["Andrei Zrelov <qa.zrelov.aa@gmail.com>"]
readme = "README.md"
packages = [{include = "devops_sandbox"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.3.1"
allure-pytest = "^2.13.2"
faker = "^18.9.0"
requests = "^2.31.0"
selenium = "^4.9.1"
webdriver-manager = "^3.8.6"
pytest-xdist = "^3.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
